infra/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banterbus
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.banterbus: "glob:*"
spec:
  selector:
    matchLabels:
      app: banterbus
  template:
    metadata:
      labels:
        app: banterbus
    spec:
      serviceAccountName: banterbus
      containers:
      - name: banterbus
        image: registry.gitlab.com/hmajid2301/banterbus:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets"
          readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "banterbus-secrets"
