infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banterbus
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: banterbus
